fixed CSSS broken style

--- a/app/assets/stylesheets/polaroids.scss
+++ b/app/assets/stylesheets/polaroids.scss
@@ -5,29 +5,30 @@
 @import "font-awesome";
 @import "jquery-ui";
 
-* {
+*{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-body {
-  background: #bdffbd;
+html, body {
+  height: 100%;  
   letter-spacing: 0.2em;
   font-family: 'Poor Story', cursive;
 
 }
 
-.wrapper{
-   margin-left: 70px;
-    hidth: calc(100vh - 300px);
-    //padding: 40px 0 40px;
-    padding: 40px 0 auto;
-   
+#container{
+  background-color: #bdffbd;
+  min-height: 100%;
+}
+
+.main{
+  overflow: auto;
+  padding-bottom: 100px;
 }
 
 .polaroid {
-
   cursor: move;
   background: #fff;
   padding: 1rem;
@@ -125,41 +126,40 @@ body {
 // ==== Footer ====
 
 .footer-container{
-  flex-shrink: 0;
+  position: relative;
+  height: 100px;
+  margin-top: -100px;
+  clear: both;  
   background-color: #ffffff;
 
 }
 
 ul{
-  list-style-type:none;
-  display:flex;
-  justify-content: center;
-
-  height: 8vh;
-
-
-
+  list-style-type: none; 
+  text-align: center;
 }
+
 ul > li{
-  display: list-item;
-  padding: 5px 30px;
+  display: inline-block;
+  padding: 10px 30px;
   font-size: 2em;
-  color: green;
+
+  .fa{
+    color: #999898;
+  }
+
+  .fa.fa-twitter:hover{
+    color: #326ada  ;
+  }
+
+  .fa.fa-github:hover{
+    color: lightcoral   ;
+  }
+
+  .fa.fa-codepen:hover{
+    color: #000000  ;
+  }
 
 }
 
-.fa{
-  color: #999898;
-}
 
-.fa.fa-twitter:hover{
-  color: #326ada  ;
-}
-
-.fa.fa-github:hover{
-  color: lightcoral   ;
-}
-
-.fa.fa-codepen:hover{
-  color: #000000  ;
-}
